added program heading components

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 				Brain <b>Play</b>
 			</h4>
 			<br>
-			<h5 class="text  nav-sub-heading"  >
+			<h5 class="text  nav-sub-heading">
 				Brain Programs Running
 			</h4>
-			<h5 class="text  nav-sub-heading"  >
+			<h5 class="text  nav-sub-heading">
 				Brain Trainers
 			</h4>
-			<h5 class="text  nav-sub-heading"  >
+			<h5 class="text  nav-sub-heading">
 				Brain Trainee
 			</h4>
-			<h5 class="text  nav-sub-heading"  >
+			<h5 class="text  nav-sub-heading">
 				Brain Hotel
 			</h4>
 		</div> 
@@ -55,6 +55,23 @@
 					</div>
 					<div class="col-xs-2">
 						<img src="http://static2.businessinsider.com/image/5899ffcf6e09a897008b5c04-1200/.jpg" >
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-4 program-heading">
+						<h4 class="text text-default"><b>GRA Trainig program</b></h4>
+						<h6 class="text text-default">Tab-Video Lecture-Room Move</h6>
+						<h6 class="text text-default" style="padding-top: 10px; font-size: 10px; ">By Rajat Rastogi</h6>
+					</div>
+					<div class="col-xs-4 program-heading">
+							<h4 class="text text-default"><b>GRA Trainig program</b></h4>
+						<h6 class="text text-default">Tab-Video Lecture-Room Move</h6>
+						<h6 class="text text-default" style="padding-top: 10px; font-size: 10px; ">By Rajat Rastogi</h6>
+					</div>
+					<div class="col-xs-4 program-heading">
+							<h4 class="text text-default"><b>GRA Trainig program</b></h4>
+						<h6 class="text text-default">Tab-Video Lecture-Room Move</h6>
+						<h6 class="text text-default" style="padding-top: 10px; font-size: 10px;" >By Rajat Rastogi</h6>
 					</div>
 				</div>
 			</div>
