--- a/index.html
+++ b/index.html
@@ -74,8 +74,38 @@
 						<h6 class="text text-default" style="padding-top: 10px; font-size: 10px;" >By Rajat Rastogi</h6>
 					</div>
 				</div>
+				<div class="row" style="margin-top: 20px">
+
+				<div class="col-xs-3 analytics-left">
+					<span class="glyphicon glyphicon-refresh"></span>
+					<br>
+					<h2 class="text text-center"><b>27 hrs</b></h2>
+					<h4 class="text text-center" style="color: #a39c9c">Total Manly Hours</h4>
+
+				</div>
+				<div class="col-xs-3 analytics">
+					<span class="glyphicon glyphicon-bookmark"></span>
+					<br>
+					<h2 class="text text-center"><b>50% </b></h2>
+					<h4 class="text text-center" style="color: #a39c9c">Passed</h4>
+				</div>
+				<div class="col-xs-3 analytics">
+					<span class="glyphicon glyphicon-tags"></span>
+					<br>
+					<h2 class="text text-center"><b>25% </b></h2>
+					<h4 class="text text-center" style="color: #a39c9c">Failed</h4>
+				</div>
+				<div class="col-xs-3 analytics-right">
+					<span class="glyphicon glyphicon-calendar"></span>
+					<br>
+					<h2 class="text text-center"><b>25%</b></h2>
+					<h4 class="text text-center" style="color: #a39c9c">Terminated</h4>
+				</div>
 			</div>
+			</div>
+
 		</div>
 	</div>
+
 </body>
 </html>
