added few edits

--- a/index.html
+++ b/index.html
@@ -3,19 +3,12 @@
 <head>
 	<title>Brain Play</title>
 		 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	
-
 <script src="https://code.highcharts.com/highcharts.js"></script>
 <script src="https://code.highcharts.com/modules/series-label.js"></script>
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
-
-
-
-
 </head>
 <body>
 	<div class="row">
@@ -45,12 +38,12 @@
 					</div>
 					<div class="col-xs-1">
 						  <div class="dropdown">
-    						<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example
+    						<button class="btn btn-default dropdown-toggle btn-round " type="button" data-toggle="dropdown"> Gurgaon - Noida Office
     						<span class="caret"></span></button>
     						<ul class="dropdown-menu">
-      						<li><a href="#">HTML</a></li>
-      						<li><a href="#">CSS</a></li>
-      						<li><a href="#">JavaScript</a></li>
+      						<li><a href="#">New Delhi</a></li>
+      						<li><a href="#">Pune</a></li>
+      						<li><a href="#">California</a></li>
     						</ul>
   						</div>
 						</div>
@@ -113,7 +106,8 @@
 			</div>
 			<div class="row" style="margin-top: 20px">
 				<div class="col-xs-6">
-					<h5 class="text"><b>Feedbacks</b></h5><table class="table table-striped">
+					<h5 class="text"><b>Feedbacks</b></h5>
+					<table class="table">
     				<thead>
       				<tr>
         				<th>Trainee Name</th>
@@ -131,6 +125,11 @@
         				<td>John Doe</td>
         				<td>+91-90xxxxxxxx</td>
        				 	<td>5.0</td>
+      				</tr>
+      				<tr>
+        				<td>Rachit Garg</td>
+        				<td>+91-90xxxxxxxx</td>
+        				<td>3.4</td>
       				</tr>
       				<tr>
         				<td>Rachit Garg</td>
